--- a/Roamni/Main.storyboard
+++ b/Roamni/Main.storyboard
@@ -675,66 +675,8 @@
                                     <segue destination="FSQ-IC-QQg" kind="embed" identifier="container" id="bqy-0b-lqD"/>
                                 </connections>
                             </containerView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zy5-mi-WNh" userLabel="miniPlayerView" customClass="LineView" customModule="Roamni" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="657" width="400" height="35"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </view>
-                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nsc-7q-lOI">
-                                <rect key="frame" x="0.0" y="657" width="400" height="35"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Y5z-mg-Rqi">
-                                    <rect key="frame" x="0.0" y="0.0" width="400" height="35"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                                <blurEffect style="extraLight"/>
-                            </visualEffectView>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tz4-9h-lXg">
-                                <rect key="frame" x="16" y="593" width="361" height="30"/>
-                                <state key="normal">
-                                    <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="tapMiniPlayerButton" destination="RCA-gQ-mcM" eventType="touchUpInside" id="P0v-S3-lfH"/>
-                                    <segue destination="el7-T8-cG3" kind="showDetail" id="XFX-Vy-GFg"/>
-                                </connections>
-                            </button>
-                            <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cik-FF-gO5">
-                                <rect key="frame" x="193.5" y="628" width="206.5" height="49"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <items/>
-                            </tabBar>
-                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CollapseArrow" translatesAutoresizingMaskIntoConstraints="NO" id="QGS-3T-OYV">
-                                <rect key="frame" x="193.5" y="593" width="48" height="30"/>
-                            </imageView>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A78-Lb-Q3V">
-                                <rect key="frame" x="257.5" y="594" width="77.5" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="Nsc-7q-lOI" firstAttribute="bottom" secondItem="zy5-mi-WNh" secondAttribute="bottom" id="0LC-A3-OJ1"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="A78-Lb-Q3V" secondAttribute="trailing" constant="24" id="1Iw-VG-yUO"/>
-                            <constraint firstItem="Tz4-9h-lXg" firstAttribute="leading" secondItem="u2k-As-z3K" secondAttribute="leadingMargin" id="4in-cI-tIf"/>
-                            <constraint firstItem="o3t-Sh-Rgp" firstAttribute="top" secondItem="A78-Lb-Q3V" secondAttribute="bottom" constant="8" symbolic="YES" id="5dY-3v-1aN"/>
-                            <constraint firstItem="zy5-mi-WNh" firstAttribute="trailing" secondItem="Nsc-7q-lOI" secondAttribute="trailing" id="Aj3-3D-ic8"/>
-                            <constraint firstItem="Cik-FF-gO5" firstAttribute="top" secondItem="o3t-Sh-Rgp" secondAttribute="bottom" constant="5" id="HJ8-Km-7Mm"/>
-                            <constraint firstItem="A78-Lb-Q3V" firstAttribute="centerX" secondItem="Cik-FF-gO5" secondAttribute="centerX" id="IDc-HR-KmO"/>
-                            <constraint firstItem="QGS-3T-OYV" firstAttribute="top" secondItem="kVz-nc-FwH" secondAttribute="bottom" constant="529" id="JaV-fv-vOF"/>
-                            <constraint firstItem="QGS-3T-OYV" firstAttribute="leading" secondItem="Cik-FF-gO5" secondAttribute="leading" id="JcJ-JN-Lof"/>
-                            <constraint firstItem="Nsc-7q-lOI" firstAttribute="top" secondItem="o3t-Sh-Rgp" secondAttribute="bottom" constant="34" id="Oi9-rM-qQO"/>
-                            <constraint firstItem="QGS-3T-OYV" firstAttribute="top" secondItem="Tz4-9h-lXg" secondAttribute="top" id="PI3-RD-vi5"/>
-                            <constraint firstItem="zy5-mi-WNh" firstAttribute="leading" secondItem="u2k-As-z3K" secondAttribute="leading" id="bxc-Jc-iIP"/>
-                            <constraint firstItem="zy5-mi-WNh" firstAttribute="top" secondItem="Nsc-7q-lOI" secondAttribute="top" id="eED-6N-dHO"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Tz4-9h-lXg" secondAttribute="trailing" constant="-18" id="gkr-Be-VDw"/>
-                            <constraint firstItem="Cik-FF-gO5" firstAttribute="trailing" secondItem="Nsc-7q-lOI" secondAttribute="trailing" id="ja2-f3-9nh"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="Nsc-7q-lOI" secondAttribute="bottom" constant="-25" id="lWx-t7-Fg8"/>
-                            <constraint firstItem="zy5-mi-WNh" firstAttribute="leading" secondItem="Nsc-7q-lOI" secondAttribute="leading" id="mmh-0x-Tfh"/>
-                            <constraint firstItem="QGS-3T-OYV" firstAttribute="bottom" secondItem="o3t-Sh-Rgp" secondAttribute="top" id="ymA-dl-jzq"/>
-                            <constraint firstItem="A78-Lb-Q3V" firstAttribute="leading" secondItem="QGS-3T-OYV" secondAttribute="trailing" constant="16" id="zdA-bg-aY4"/>
-                        </constraints>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Search" id="e4Z-FH-pCC">
@@ -751,16 +693,12 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="miniPlayerButton" destination="Tz4-9h-lXg" id="01t-Gp-dvz"/>
-                        <outlet property="miniPlayerView" destination="zy5-mi-WNh" id="2lC-JD-B92"/>
-                        <outlet property="songTitle" destination="A78-Lb-Q3V" id="eVP-ux-D0v"/>
                         <outlet property="swtichBtn" destination="hTU-pf-g0A" id="SSW-4m-HGy"/>
-                        <outlet property="tabBar" destination="Cik-FF-gO5" id="gFX-8W-wbL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WNS-Mf-nLm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-610.39999999999998" y="-1530.5847076461771"/>
+            <point key="canvasLocation" x="-1303" y="-1620"/>
         </scene>
         <!--My Roamni-->
         <scene sceneID="suh-fE-5e0">
@@ -3148,7 +3086,6 @@
         <image name="upload" width="128" height="128"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="XFX-Vy-GFg"/>
         <segue reference="YIB-t0-b6L"/>
         <segue reference="BFd-gx-77j"/>
         <segue reference="xMV-R0-9wp"/>
